fix: Error modal visibility on loading

--- a/src/components/modal-error/modal-error.module.css
+++ b/src/components/modal-error/modal-error.module.css
@@ -56,3 +56,6 @@
   }
 
 }
+.ModalError_hidden{
+  visibility:hidden;
+}
